Require honest native admission and fallback parity evidence
Select shared native regions through the planner capability model and retain whole-plan fallback for unverified state, backend settings, metric/control contracts, or shared ownership. Describe the multi-way join's remaining integration requirement accurately. Require acceleration and native activity in native SQL tests; give fallback cases explicit expectations and zero-activity assertions instead of silently treating Flink-versus-Flink comparisons as native parity. Update canonical operator and architecture documentation for the corrected foundations.

Validation: the 957-test SQL/planner run identified 12 failing cases; all were corrected and passed the focused integration rerun. Final planner/admission/parity commit checks and Starlight build/internal-link validation pass. Benchmark edits and unpublished measurements remain outside this change.