@@ -4,32 +4,25 @@
  */
 package tech.streamfusion.flink.planner;
 
-import java.lang.reflect.InvocationTargetException;
-import java.lang.reflect.Method;
-import java.util.Collections;
 import java.util.List;
 import org.apache.calcite.rel.core.AggregateCall;
 import org.apache.flink.api.dag.Transformation;
+import org.apache.flink.configuration.Configuration;
 import org.apache.flink.configuration.ReadableConfig;
 import org.apache.flink.table.data.RowData;
 import org.apache.flink.table.planner.delegation.PlannerBase;
-import org.apache.flink.table.planner.plan.nodes.exec.ExecEdge;
 import org.apache.flink.table.planner.plan.nodes.exec.ExecNodeBase;
 import org.apache.flink.table.planner.plan.nodes.exec.ExecNodeConfig;
 import org.apache.flink.table.planner.plan.nodes.exec.ExecNodeContext;
 import org.apache.flink.table.planner.plan.nodes.exec.InputProperty;
 import org.apache.flink.table.planner.plan.nodes.exec.StateMetadata;
 import org.apache.flink.table.planner.plan.nodes.exec.stream.StreamExecNode;
-import org.apache.flink.table.planner.plan.utils.KeySelectorUtil;
-import org.apache.flink.table.runtime.keyselector.RowDataKeySelector;
-import org.apache.flink.table.runtime.typeutils.InternalTypeInfo;
 import org.apache.flink.table.types.logical.RowType;
 
-/** Distinct StreamFusion physical node for timer-free unbounded keyed aggregation. */
-public final class StreamFusionExecGroupAggregate extends ExecNodeBase<RowData> implements StreamExecNode<RowData> {
-    private static final String TRANSLATOR_CLASS =
-            "tech.streamfusion.flink.aggregate.StreamFusionGroupAggregateTranslator";
-
+/** Selected aggregation fragment; routing, native state and runtime ownership belong to the region. */
+public final class StreamFusionExecGroupAggregate extends ExecNodeBase<RowData>
+        implements StreamExecNode<RowData>, StreamFusionNativePlanNode {
+    private final StreamFusionNativeNodeMetadata nativeMetadata = new StreamFusionNativeNodeMetadata();
     private final int[] grouping;
     private final AggregateCall[] aggregateCalls;
     private final boolean[] aggregateCallNeedRetractions;
@@ -52,7 +45,7 @@ public final class StreamFusionExecGroupAggregate extends ExecNodeBase<RowData> 
                 ExecNodeContext.newNodeId(),
                 new ExecNodeContext("streamfusion-exec-group-aggregate_1"),
                 persistedConfig,
-                Collections.singletonList(inputProperty),
+                List.of(inputProperty),
                 outputType,
                 description);
         this.grouping = grouping.clone();
@@ -63,21 +56,27 @@ public final class StreamFusionExecGroupAggregate extends ExecNodeBase<RowData> 
         this.stateMetadata = stateMetadata;
     }
 
-    @SuppressWarnings("unchecked")
     @Override
-    protected Transformation<RowData> translateToPlanInternal(PlannerBase planner, ExecNodeConfig config) {
-        ExecEdge inputEdge = getInputEdges().get(0);
-        Transformation<RowData> input = (Transformation<RowData>) inputEdge.translateToPlan(planner);
-        long stateRetention = StateMetadata.getStateTtlForOneInputOperator(config, stateMetadata);
-        RowType inputType = (RowType) inputEdge.getOutputType();
-        RowDataKeySelector selector = KeySelectorUtil.getRowDataSelector(
-                planner.getFlinkContext().getClassLoader(), grouping, InternalTypeInfo.of(inputType));
-        try {
-            Class<?> translator = Class.forName(
-                    TRANSLATOR_CLASS, true, planner.getFlinkContext().getClassLoader());
-            Method method = translator.getMethod(
-                    "translate",
-                    Transformation.class,
+    public StreamFusionNativeNodeMetadata nativeMetadata() {
+        return nativeMetadata;
+    }
+
+    @Override
+    public boolean ownsNativeKeyedState() {
+        return true;
+    }
+
+    @Override
+    public byte[] nativePlanFragment(PlannerBase planner) {
+        Configuration config = Configuration.fromMap(
+                planner.getTableConfig().getConfiguration().toMap());
+        config.addAll(Configuration.fromMap(getPersistedConfig().toMap()));
+        long retention =
+                StateMetadata.getStateTtlForOneInputOperator(ExecNodeConfig.ofNodeConfig(config, false), stateMetadata);
+        return StreamFusionNativePlanNode.invokeBuilder(
+                planner,
+                "tech.streamfusion.flink.aggregate.StreamFusionGroupAggregateTranslator",
+                new Class<?>[] {
                     RowType.class,
                     RowType.class,
                     int[].class,
@@ -86,31 +85,21 @@ public final class StreamFusionExecGroupAggregate extends ExecNodeBase<RowData> 
                     boolean.class,
                     boolean.class,
                     long.class,
-                    ReadableConfig.class,
-                    org.apache.flink.streaming.api.environment.StreamExecutionEnvironment.class,
-                    RowDataKeySelector.class);
-            Transformation<RowData> result = (Transformation<RowData>) method.invoke(
-                    null,
-                    input,
-                    inputType,
-                    (RowType) getOutputType(),
-                    grouping,
-                    aggregateCalls,
-                    aggregateCallNeedRetractions,
-                    generateUpdateBefore,
-                    needRetraction,
-                    stateRetention,
-                    getPersistedConfig(),
-                    planner.getExecEnv(),
-                    selector);
-            if (result == null) {
-                throw new IllegalStateException("A selected StreamFusion GroupAggregate failed translation");
-            }
-            return result;
-        } catch (ClassNotFoundException | NoSuchMethodException | IllegalAccessException e) {
-            throw new IllegalStateException("Could not invoke the StreamFusion GroupAggregate runtime", e);
-        } catch (InvocationTargetException e) {
-            throw new IllegalStateException("StreamFusion GroupAggregate translation failed", e.getCause());
-        }
+                    ReadableConfig.class
+                },
+                getInputEdges().get(0).getOutputType(),
+                getOutputType(),
+                grouping,
+                aggregateCalls,
+                aggregateCallNeedRetractions,
+                generateUpdateBefore,
+                needRetraction,
+                retention,
+                config);
+    }
+
+    @Override
+    protected Transformation<RowData> translateToPlanInternal(PlannerBase planner, ExecNodeConfig config) {
+        return StreamFusionStatelessRegion.translate(this, planner);
     }
 }
